Se agregan drivers gpio_fast_out, ws2812b y neopixel_stripe.

--- a/firmware/drivers/CMakeLists.txt
+++ b/firmware/drivers/CMakeLists.txt
@@ -5,10 +5,13 @@ set(srcs
     "microcontroller/src/gpio_mcu.c"
     "microcontroller/src/delay_mcu.c"
     "microcontroller/src/timer_mcu.c"
+    "microcontroller/src/gpio_fast_out_mcu.c"
     "devices/src/led.c"
     "devices/src/switch.c"
     "devices/src/lcditse0803.c"
     "devices/src/hc_sr04.c"
+    "devices/src/ws2812b.c"
+    "devices/src/neopixel_stripe.c"
     )
 
 # Always included headers
